# fizzbuzz

./: .gitignore  README.md  pyproject.toml
.circleci/: config.yml
src/: cli.py
src/fizzbuzz/: __init__.py
tests/: test_cli.py  test_fizzbuzz.py
