[tool.poetry]
name = "fizzbuzz"
version = "0.1.0"
description = "fizzbuzz"
authors = ["kelvintaywl <kelvintaywl@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.6"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
junit_family = "xunit1"

# Extra options:
addopts = [
  "--junitxml=report.xml",
]
